...
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_sample_qr_code" />
        </FrameLayout>

        <Button
            android:id="@+id/scanQrCodesButton"
            style="@style/PrimaryButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_56"
            android:layout_marginHorizontal="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_80"
            android:layout_marginBottom="@dimen/dp_32"
...
